# MaeStore

./: README.md  manage.py  pyproject.toml
MaeStore/: asgi.py  settings.py  urls.py  wsgi.py
Testament/: asgi.py  settings.py
archive/: forms.py  models.py  search_indexes.py  views.py
archive/templates/archive/: base.html  index.html  read.html  upload.html
archive/templates/search/: search.html
